# MAI-labs

./: .gitignore  README.md
DA/lab1/: CMakeLists.txt  makefile  testGen.py
DA/lab1/src/: TCountingSort.h  TKeyValue.h  main.cpp
DA/lab2/: CMakeLists.txt  makefile  testGen.py
DA/lab2/prog/: prog.cpp
DA/lab2/src/: Node.cpp  Node.h  RBTree.h  main.cpp
DA/lab4/: 1000+str  100str  500str  CMakeLists.txt  main.cpp
DM/cw/: CMakeLists.txt  main.cpp
FUND/Lab24/: CMakeLists.txt  cstack.c  cstack.h  ctree24.c  ctree24.h  main.c  readme  utils.c  utils.h
FUND/Lab26/: CMakeLists.txt  README.md  main.c  make.bat  queue.c  queue.h
FUND/bash/: README.md  laba.sh  test0.sh  test1.sh  test2.sh  tests.sh
FUND/kp6/: CMakeLists.txt  README.md  input+916.txt  list.c  list.h  main.c
FUND/kp7/: CMakeLists.txt  README.md  main.c  vector.c  vector.h
FUND/kp8/: CMakeLists.txt  README.md  list.c  list.h  main.c
FUND/kp9/: CMakeLists.txt  README.md  input.txt  list.c  list.h  main.c
LP/lab1/: one.pl  task1.pl  task2.pl
LP/lp-capstone-sikorskii/: Essay.md  FamilyTree.ged  README.md  REPORT.md  capstone-task.pl  dataFIle.pl  output.pl  task1.pl
LP/lp-capstone-sikorskii/java-parser/: input.ged  output.pl  pom.xml
LP/lp-capstone-sikorskii/java-parser/src/main/java/ru/aldes/: Main.java  ParserPatterns.java  Person.java
OOP/: README.md  variant.json
OOP/lab1/: CMakeLists.txt  variant.txt
OOP/lab1/headers/: figure.h  figures.h  pentagon.h  point.h  rhombus.h  trapeze.h
OOP/lab1/src/: main.cpp  pentagon.cpp  point.cpp  rhombus.cpp  trapeze.cpp
OS/: README.md  main.cpp
OS/coursework/: Allocator.h  BlockAllocator.h  BuddyAllocator.h  CMakeLists.txt  main.cpp
OS/lab1/: CMakeLists.txt  README.md  main.c  main.cpp
OS/lab1/src/: child1.cpp  child2.cpp  main.cpp
OS/lab3/: CMakeLists.txt  traceout
OS/lab3/headers/: mtxutils.h  tutils.h
OS/lab3/src/: main.c  mtxutils.c  mtxutils.h  tutils.c  tutils.h
OS/lab4/: CMakeLists.txt
OS/lab4/src/: child1.cpp  main.cpp  mem.h
OS/lab5/: Makefile  lib1.c  lib1.h  lib2.c  main.c
OS/lab5/libSrc/: CMakeLists.txt  mathLibrary1.c  mathLibrary2.c
OS/lab5/libSrc/src/private/src/: operations.c
OS/lab5/libSrc/src/public/headers/: api.h
OS/lab5/libSrc/src/public/src/: api.c
OS/lab5/libSrc1/: CMakeLists.txt
OS/lab5/libSrc1/src/private/headers/: operations.h
OS/lab5/libSrc1/src/private/src/: operations.c
OS/lab5/libSrc1/src/public/src/: api.c
OS/lab5/program1/: CMakeLists.txt  main.c
OS/lab5new/: lib1.h  lib2.c  lib2.h  main2.c
OS/lab6/: AbstractNode.h  CMakeLists.txt  ChildNodeInfo.h  Message.h  MessageBuilder.h  MessageData.h  MessageTypes.h  ServerNode.h  SpringBootApplication.h  ZmqUtils.h  main.cpp  server.cpp
lab1/: CMakeLists.txt
